<resources>
    <string name="app_name">studtool</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_favorite">favorite</string>
    <string name="action_settings">settings</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="sign_in">Войти</string>
    <string name="logout">Выйти</string>
    <string name="title_activity_login">Вход</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_up">Зарегистрироваться</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="error_invalid_email">Неверный email или пароль</string>
    <string name="error_invalid_password">Пароль слишком короткий</string>
    <string name="error_incorrect_password">Неверный email или пароль</string>
    <string name="error_field_required">Это поле обязательно</string>
    <string name="permission_rationale">"Доступ к контактам необходим, чтобы автоматически заполнить ваш email"</string>
    <string name="title_activity_sign_up">Регистрация</string>
    <string name="promt_password_repeat">Повторите пароль</string>
    <string name="title_item_list">Документы</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="welcome_studtool">Добро пожаловать в Studtool</string>
    <string name="hello_studtool">Мы поможем сделать вашу учебу проще</string>
    <string name="error_passwords_mismatch">Пароли не совпадают</string>
    <string name="msg_email_duplicate">Email duplicate</string>
    <string name="msg_internal_server_error">Server error!</string>
    <string name="msg_wrong_credentials">Wrong email or password!</string>
    <string name="button_file">Файлы</string>
    <string name="add_new_document">Введите название документа</string>
    <string name="create_new_document_button">Создать</string>
    <string name="create_file_title">Создание файла</string>
    <string name="file_create_confirm">Создан</string>
    <string name="file_create_error">Ошибка создания файла</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_sidebar">SidebarActivity</string>
    <string name="add">Добавить</string>
    <string name="add_home_task">Добавить задачу</string>
</resources>
