<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" android:layout_marginStart="16dp" android:id="@+id/editText"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/button" android:hint="@string/add_new_document"/>
    <Button
            android:text="@string/create_new_document_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button" app:layout_constraintStart_toEndOf="@+id/editText"
            android:layout_marginStart="20dp" app:layout_constraintBaseline_toBaselineOf="@+id/editText"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:onClick="sendMessage"/>
    <Button
            android:text="@string/button_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button4" android:onClick="openItems" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editText"/>
    <Button
            android:text="@string/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_exit" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/button"/>
</android.support.constraint.ConstraintLayout>
