<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HelloActivity">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@mipmap/hello_studtool"

            android:id="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/button2"/>
    <Button
            android:text="@string/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="16dp"
            android:id="@+id/button2"
            android:onClick="logIn" app:layout_constraintStart_toEndOf="@+id/button3"
            app:layout_constraintHorizontal_bias="0.5"/>
    <Button
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp" android:id="@+id/button3"
            android:onClick="signUp" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/button2"/>
    <TextView
            android:text="@string/hello_studtool"
            android:textSize="30dp"
            android:layout_width="351dp"
            android:layout_height="91dp"
            android:id="@+id/textView2"

            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintBottom_toTopOf="@+id/imageView"/>
    <TextView
            android:text="@string/welcome_studtool"
            android:textSize="20dp"
            android:layout_width="280dp"
            android:layout_height="44dp"
            android:id="@+id/textView3"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/textView2"/>
</android.support.constraint.ConstraintLayout>